--- a/LocMessApp/app/src/main/res/layout/content_location_option.xml
+++ b/LocMessApp/app/src/main/res/layout/content_location_option.xml
@@ -26,6 +26,14 @@
             android:layout_weight="1">
 
             <RadioButton
+                android:id="@+id/radioButton_mylocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="true"
+                android:text="@string/my_location" />
+
+            <RadioButton
                 android:id="@+id/radioButton_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,11 +58,11 @@
             android:orientation="vertical"
             android:visibility="visible">
 
-            <fragment
-                android:id="@+id/place_autocomplete_fragment"
+            <Button
+                android:id="@+id/button_add_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
+                android:text="Add This Location" />
 
             <com.mapbox.mapboxsdk.maps.MapView
                 android:id="@+id/mapView"
@@ -83,10 +91,10 @@
                     android:progress="50" />
 
                 <TextView
-                    android:paddingRight="10dp"
                     android:id="@+id/text_radius"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingRight="10dp"
                     android:text="250m" />
 
             </LinearLayout>
