--- a/LocMessApp/app/src/main/res/layout/delete_popup.xml
+++ b/LocMessApp/app/src/main/res/layout/delete_popup.xml
@@ -42,7 +42,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Delete" />
+            android:backgroundTint="@color/colorRemove"
+            android:text="Delete"
+            android:textColor="@color/colorWhite" />
 
         <Button
             android:id="@+id/cancel"
