--- a/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
+++ b/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/text1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="35dp"
