--- a/LocMessApp/app/src/main/res/layout/profile_content.xml
+++ b/LocMessApp/app/src/main/res/layout/profile_content.xml
@@ -66,7 +66,11 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="150dp"/>
+        android:layout_marginTop="150dp">
+
+    <include layout="@layout/profile_fragment_locations" />
+
+    </android.support.v4.view.ViewPager>
 
 
 </android.support.design.widget.CoordinatorLayout>
