--- a/LocMessApp/app/src/main/res/layout/content_location_option.xml
+++ b/LocMessApp/app/src/main/res/layout/content_location_option.xml
@@ -13,109 +13,131 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="26dp"
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true">
 
         <RadioGroup
-            android:paddingTop="24dp"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="24dp"
-            android:layout_weight="1">
+            android:layout_weight="1" >
 
             <RadioButton
-                android:id="@+id/radioButton_mylocation"
-                android:layout_width="wrap_content"
+                android:id="@+id/radioButton_locations"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:checked="true"
-                android:text="@string/my_location" />
+                android:text="Locations" />
 
-            <RadioButton
-                android:id="@+id/radioButton_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="true"
-                android:text="@string/location" />
-
-            <RadioButton
-                android:id="@+id/radioButton_wifi_direct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/wifi_direct" />
-
-        </RadioGroup>
-
-        <LinearLayout
-            android:id="@+id/layout_location"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="15.73"
-            android:orientation="vertical"
-            android:visibility="visible">
-
-            <Button
-                android:id="@+id/button_add_location"
+            <LinearLayout
+                android:id="@+id/layout_locations"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add This Location" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:visibility="visible">
 
-            <com.mapbox.mapboxsdk.maps.MapView
-                android:id="@+id/mapView"
-                android:layout_width="match_parent"
-                android:layout_height="332dp"
-                mapbox:mapbox_cameraTargetLat="38.7378954"
-                mapbox:mapbox_cameraTargetLng="-9.1378972"
-                mapbox:mapbox_cameraZoom="15"
-                mapbox:mapbox_myLocation="true"
-                mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
-                mapbox:mapbox_uiAttribution="false"
-                mapbox:mapbox_uiLogo="false">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-            </com.mapbox.mapboxsdk.maps.MapView>
+                    <AutoCompleteTextView
+                        android:id="@+id/autocomplete_locations"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:completionThreshold="1"
+                        android:hint="Choose Location" />
+
+                    <Button
+                        android:id="@+id/button_set_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ok" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.67"
+                    android:orientation="vertical"
+                    android:visibility="visible">
+
+                    <com.mapbox.mapboxsdk.maps.MapView
+                        android:id="@+id/mapView"
+                        android:layout_width="350dp"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center"
+                        mapbox:mapbox_cameraTargetLat="38.7378954"
+                        mapbox:mapbox_cameraTargetLng="-9.1378972"
+                        mapbox:mapbox_cameraZoom="10"
+                        mapbox:mapbox_myLocation="true"
+                        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
+                        mapbox:mapbox_uiAttribution="false"
+                        mapbox:mapbox_uiLogo="false">
+
+                    </com.mapbox.mapboxsdk.maps.MapView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <SeekBar
+                            android:id="@+id/seekBar_radius"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:progress="50" />
+
+                        <TextView
+                            android:id="@+id/text_radius"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingRight="10dp"
+                            android:text="250m" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:orientation="vertical"></LinearLayout>
 
-                <SeekBar
-                    android:id="@+id/seekBar_radius"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:progress="50" />
+            <RadioButton
+                android:id="@+id/radioButton_wifi_direct"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_weight="1"
+                android:text="@string/wifi_direct" />
+
+            <LinearLayout
+                android:id="@+id/layout_wifi_direct"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/text_radius"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="10dp"
-                    android:text="250m" />
+                    android:text="WIFI_DIRECT"
+                    android:textAlignment="center" />
 
             </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layout_wifi_direct"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="WIFI_DIRECT"
-                android:textAlignment="center" />
-        </LinearLayout>
+        </RadioGroup>
 
     </LinearLayout>
 
