--- a/LocMessApp/app/src/main/res/layout/dialog_new_post.xml
+++ b/LocMessApp/app/src/main/res/layout/dialog_new_post.xml
@@ -100,7 +100,8 @@
                 android:layout_height="wrap_content"
                 android:text="Time: "
                 android:textAlignment="textEnd"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/text_date"
