--- a/LocMessApp/app/src/main/res/layout/content_location_option.xml
+++ b/LocMessApp/app/src/main/res/layout/content_location_option.xml
@@ -112,7 +112,8 @@
                     android:id="@+id/text_wifi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <RadioButton
