--- a/LocMessApp/app/src/main/res/layout/my_post_list_item.xml
+++ b/LocMessApp/app/src/main/res/layout/my_post_list_item.xml
@@ -107,15 +107,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Location: "
+            android:text="Delivery: "
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/text_post_location"
+            android:id="@+id/text_delivery_mode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="LOCATION"
+            android:text="DELIVERY_MODE"
             android:textSize="16sp" />
     </LinearLayout>
 
