--- a/LocMessApp/app/src/main/res/layout/content_restrition_option.xml
+++ b/LocMessApp/app/src/main/res/layout/content_restrition_option.xml
@@ -19,9 +19,18 @@
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true">
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Which users can receive this Post?"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="20sp" />
+
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
             android:layout_weight="1">
 
             <RadioButton
@@ -66,13 +75,15 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="This Post will be shown to everyone."
-                    android:textAlignment="center" />
+                    android:text="This Post will be sent to every user"
+                    android:textAlignment="center"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Press the button to continue!"
+                    android:text="Press the button to continue"
                     android:textAlignment="center" />
 
             </LinearLayout>
@@ -89,8 +100,10 @@
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="This post will only be shown to this users."
-                    android:textAlignment="center" />
+                    android:text="Only users with this interest will receive this Post"
+                    android:textAlignment="center"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textSize="16sp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -141,7 +154,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="This post won't be shown to this users."
+                    android:text="Users with this interest won't receive this Post"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                    android:textSize="16sp"
                     android:textAlignment="center" />
 
                 <LinearLayout
