--- a/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
+++ b/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
@@ -9,19 +9,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/text1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="35dp"
+            android:layout_marginLeft="40dp"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="TextView"
-            android:textColor="#000000"
-            android:textSize="15dp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="TextView"
+                android:textColor="#000000"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/text_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="LOCATION" />
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/icon_delivery"
@@ -32,8 +49,8 @@
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:backgroundTint="@android:color/holo_red_dark"
             android:focusable="false"
